Fix menu alignment

--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -1,20 +1,22 @@
 .menu-bar-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    font-family: Arial, Helvetica, sans-serif;
+    align-items: flex-start;
     
-    /* width: 100%; */
-    /* height: 100px; */
-    background: transparent;
-    /* background-color: #131313f3; */
-    /* background: blur(5px);     */
+
     position: sticky;
     top: 0;
     left: 0;
-    padding-top: 2vh;
-    margin-bottom: 100px;
-    z-index: 999999999;
+    // padding-top: 2vh;
+    padding-top: 3vh;
+    z-index: 99999;
 
+    
+    
+}
+
+.menu-web-name-link {
     color: #ffffffb9;
 
     -webkit-touch-callout: none; /* iOS Safari */
@@ -23,12 +25,40 @@
     -moz-user-select: none; /* Old versions of Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
-
-    
-}
-
-.menu-about, .menu-web-name {
+    background: transparent;
+    font-style: normal;
     cursor: pointer;
     color: #fff;
     text-decoration: none;
+    font-weight: 700;
+}
+
+.menu-about {
+    // position: relative;
+    cursor: pointer;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    padding-left: 3vw;
+}
+
+.menu-web-name {
+    font-size: 1vw;
+    width: 100vw;
+    
+    background: none;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    
+}
+
+.nav-menu-grid-button {
+    // border: 2px solid red;
+    position: absolute;
+    top: 3vh;
+    right: 3vw;
+
+    // float: right;
+    // padding-top: 5vh;
 }
